--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,37 @@
-<div class = "row">
-  <h1 text-align='center'>  Team IPL 2020</h1>
-</div>
-<div class = "col-md-2">
-   <select class="form-control" (change)="getPlayers($event)">
-    <option value= "" disabled>Select Team</option>
-    
-   <option *ngFor=" let team of teams" value="{{team}}">{{team}}</option>
+<div class="row mt-3">
+  <div class="col md-8">
+    <h1>{{message}}</h1>
+    <select class="form-control" (change)="getPlayerOfTeam($event)">
+      <option value="" disabled>Select Team</option>
+      <option *ngFor="let team of teamNames">{{team}}</option>
+    </select>  
+    </div>
+    <div class="col md-8">
+    </div>
+    </div>
+    <div class="row mt-4 ml-3">
+    <div *ngIf="players && players.length > 0">
+      <table class="table">
+  <thead class="thead-dark">
+    <tr>
+      <th scope="col">Team</th>
+      <th scope="col">Name</th>
+      <th scope="col">Role</th>
+      <th scope="col">Price</th>
+    </tr>
+  </thead>
+  <tbody>
+      <tr  *ngFor="let player of players">
+        <th scope="row">{{player["label"]}}</th>
+        <td>{{player["player"]}}</td>
+        <td>{{player["role"]}}</td>
+        <td>{{player["price"]}}</td>
+      </tr>
+  </tbody>
+</table>
 
-  
-    </select>
-</div>
+
+    </div>
+    </div>
+
+  <div class="col md-4"></div>
